update ternakUserAll
